--- a/webpages/styles/colors-light.css
+++ b/webpages/styles/colors-light.css
@@ -7,10 +7,10 @@
   --content-background: #ffffff;
   --navigation-background: #ecebeb;
   --search-toolbar-background: #f5f5f5;
-  --button-background: #ecebeb;
+  --button-background: #e1e1e1;
   --button-hover-background: #dcdcdc;
   --tab-hover-underline: #c8c8c8;
-  --input-background: #fff;
+  --input-background: #f0f0f0;
   --search-input-background: #ffffff;
   --switch-inner-background: var(--content-text);
   --tooltip-background: #f1f1f1;
