--- a/webpages/styles/colors.css
+++ b/webpages/styles/colors.css
@@ -25,7 +25,7 @@
   --button-background: #181818;
   --button-hover-background: #1a1a1a;
   --tab-hover-underline: #1e1e1e;
-  --input-background: #1f1f1f;
+  --input-background: #1d1d1d;
   --search-input-background: #252525;
   --switch-border: #808080;
   --switch-inner-background: #eee;
